SyntacticAnalyzer/tests/fail/metodos_dynamic.java
class A {
 // despues del encabezado de un metodo debe venir un bloque
 dynamic void f1();
 dynamic void f2();
 dynamic int f3(char c);
}
